Some medium refactoring. Defining a lot of variables and parameters final...